--- a/pchat/style.css
+++ b/pchat/style.css
@@ -7,7 +7,6 @@
 	padding: 0;
 	outline: none;
 	list-style: none;
-	text-rendering: optimizeLegibility;
 	-webkit-text-size-adjust: 100%;
 }
 
@@ -16,7 +15,7 @@ body {
 	color: #404040;
 	background: #fff;
 	/*background: url(grid.png);*/
-	font: 12px/20px -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font: 12px/20px 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 #index>div {
@@ -42,7 +41,6 @@ body {
 	width: 155px;
 	height: 235px;
 	margin: 0 0 20px 20px;
-	/*background: red;*/
 }
 
 a:hover,
@@ -70,7 +68,7 @@ nav {
 	width: 155px;
 	text-align: center;
 	line-height: 18px;
-	text-shadow: 0 1px 0 #fff;
+	text-shadow: 0 1px 0 rgba(255,255,255,0.5);
 	cursor: default;
 }
 
@@ -172,17 +170,16 @@ nav a b {
 nav header b,
 nav caption b,
 nav div b {
-	margin: 0 2px;
+	margin: 0 1px;
 	padding: 1px 4px;
 }
 
 nav div a,
 nav div i {
 	position: absolute;
-	top: 6px;
-	font: 16px/17px FontAwesome;
+	top: 7px;
+	font: 16px FontAwesome;
 	z-index: 10;
-	/*background: rgba(255,0,0,0.25);*/
 }
 
 .index 			{ left: 6px; right: 6px; font: inherit; }
@@ -206,8 +203,7 @@ nav div i {
 .rr:before {
 	display: inline-block;
 	width: 10px;
-	padding: 0 3px;
-	text-align: center;
+	padding: 0 4px;
 }
 
 .ll.x:before,
@@ -216,12 +212,11 @@ nav div i {
 	position: absolute;
 	background: transparent;
 	font-size: 14px;
-	line-height: 18px;
 }
 
 .ll.x:before 	{ left: 4px; }
-.ll.x:after 	{ padding: 0 3px 0 5px; }
-.rr.x:before 	{ padding: 0 5px 0 3px; }
+.ll.x:after 	{ padding: 0 1px 0 7px; }
+.rr.x:before 	{ padding: 0 7px 0 1px; }
 .rr.x:after 	{ right: 4px; }
 
 li {
