--- a/pchat/style.css
+++ b/pchat/style.css
@@ -72,6 +72,8 @@ nav {
 	cursor: default;
 }
 
+nav.clear { clear: left; }
+
 #index nav,
 #index nav+ul {
 	float: left;
@@ -81,6 +83,7 @@ nav {
 #index nav+ul {
 	height: 140px;
 	width: 155px;
+	padding: 5px 0;
 }
 
 #log nav {
@@ -99,8 +102,6 @@ nav {
 	box-shadow: inset 0 1px 2px #c0c0c0;
 }
 
-#index ul 		{ margin-left: 200px; padding: 5px 0; }
-nav.clear 		{ clear: left; }
 #log nav > * 	{ margin: 5px 0; }
 nav div 		{ position: relative; min-height: 18px; padding: 6px; }
 nav table 		{ width: 100%; padding: 5px; }
@@ -220,8 +221,8 @@ nav div i {
 .rr.x:after 	{ right: 4px; }
 
 li {
-	padding-left: 20px;
-	text-indent: -20px;
+	padding-left: 10px;
+	text-indent: -10px;
 }
 
 li.beep,
