--- a/pchat/style.css
+++ b/pchat/style.css
@@ -1,5 +1,3 @@
-@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);
-
 * {
 	margin: 0;
 	border: 0;
@@ -179,24 +177,24 @@ nav div a,
 nav div i {
 	position: absolute;
 	top: 7px;
-	font: 16px FontAwesome;
+	font: 18px/14px Verdana;
 	z-index: 10;
 }
 
-.index 			{ left: 6px; right: 6px; font: inherit; }
-.l, .ll 		{ text-align: left; }
-.r, .rr 		{ text-align: right; }
-.ll 			{ left: 6px; right: 83.33%; }
-.l 				{ left: 16.67%; right: 50%; }
-.r 				{ left: 50%; right: 16.67%; }
-.rr 			{ left: 83.33%; right: 6px; }
+.index  { left: 6px; right: 6px; font: inherit; }
+.l, .ll { text-align: left; }
+.r, .rr { text-align: right; }
+.ll     { left: 6px; right: 83.33%; }
+.l      { left: 16.67%; right: 50%; }
+.r      { left: 50%; right: 16.67%; }
+.rr     { left: 83.33%; right: 6px; }
 
-.ll:after 		{ content: '\f100'; }
-.rr:before 		{ content: '\f101'; }
-.l:after,
-.ll.x:after 	{ content: '\f104'; }
-.r:before,
-.rr.x:before 	{ content: '\f105'; }
+.ll:after    { content: '«'; }
+.rr:before   { content: '»'; }
+.l:after, 
+.ll.x:after  { content: '‹'; }
+.r:before, 
+.rr.x:before { content: '›'; }
 
 .ll:after,
 .l:after,
@@ -204,23 +202,22 @@ nav div i {
 .rr:before {
 	display: inline-block;
 	width: 10px;
-	padding: 0 4px;
+	padding: 0 4px 2px;
 }
 
 .ll.x:before,
 .rr.x:after { 
 	content: '|';
 	position: absolute;
-	top: 2px;
 	background: transparent;
 	font-size: 10px;
 	font-weight: bold;
 }
 
-.ll.x:before 	{ left: 4px; }
-.ll.x:after 	{ padding: 0 1px 0 7px; }
-.rr.x:before 	{ padding: 0 7px 0 1px; }
-.rr.x:after 	{ right: 4px; }
+.ll.x:before { left: 4px; }
+.ll.x:after  { padding: 0 1px 2px 7px; }
+.rr.x:before { padding: 0 7px 2px 1px; }
+.rr.x:after  { right: 4px; }
 
 li {
 	padding-left: 10px;
