--- a/voxns/css/landing-page.css
+++ b/voxns/css/landing-page.css
@@ -12,7 +12,7 @@
  */
 
 body {
-  font-family: CiscoSansTT, 'Times New Roman', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: CiscoSansTT, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
