--- a/voxns/css/landing-page.css
+++ b/voxns/css/landing-page.css
@@ -29,19 +29,17 @@ header.masthead {
   background-color: #343a40;
   background: url("../img/bg-masthead.jpg") no-repeat center center;
   background-size: cover;
-  padding-top: 8rem;
-  padding-bottom: 4rem;
+  padding: 6rem 1rem 3rem;
 }
 
 header.masthead .overlay {
-  display: none;
   position: absolute;
   background-color: #212529;
   height: 100%;
   width: 100%;
   top: 0;
   left: 0;
-  opacity: 0.3;
+  opacity: 0.2;
 }
 
 header.masthead h1 {
@@ -50,8 +48,8 @@ header.masthead h1 {
 
 @media (min-width: 768px) {
   header.masthead {
-    padding-top: 12rem;
-    padding-bottom: 6rem;
+    padding-top: 8rem;
+    padding-bottom: 4rem;
   }
   header.masthead h1 {
     font-size: 3rem;
