--- a/voxns/css/landing-page.css
+++ b/voxns/css/landing-page.css
@@ -51,7 +51,7 @@ h2 .o7 {
 header.masthead {
   position: relative;
   background-color: #343a40;
-  background: url("../img/bg-masthead.jpg") no-repeat center center;
+  background: url("../img/masthead.jpg") no-repeat center center;
   background-size: cover;
   padding: 8rem 1rem 2rem;
 }
@@ -82,6 +82,7 @@ header.masthead .overlay {
 .showcase .showcase-img {
   min-height: 30rem;
   background-size: cover;
+  background-position: center;
 }
 
 @media (min-width: 768px) {
@@ -128,7 +129,7 @@ header.masthead .overlay {
 .call-to-action {
   position: relative;
   background-color: #343a40;
-  background: url("../img/bg-masthead.jpg") no-repeat center center;
+  background: url("../img/masthead.jpg") no-repeat center center;
   background-size: cover;
   padding-top: 7rem;
   padding-bottom: 7rem;
