--- a/voxns/css/landing-page.css
+++ b/voxns/css/landing-page.css
@@ -70,13 +70,22 @@ header.masthead {
 }
 
 .showcase .showcase-text {
-  padding: 3rem;
+  padding: 2rem;
 }
 
 .showcase .showcase-img {
-  min-height: 24rem;
+  min-height: 16rem;
   background-size: cover;
   background-position: center;
+}
+
+@media (min-width: 768px) {
+  .showcase .showcase-text {
+    padding: 3rem;
+  }
+  .showcase .showcase-img {
+    min-height: 24rem;
+  }
 }
 
 .features-icons {
