--- a/voxns/css/landing-page.css
+++ b/voxns/css/landing-page.css
@@ -83,11 +83,11 @@ header.masthead {
   position: relative;
   /*top: 4rem;*/
   margin-bottom: -4rem;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.25);
+  box-shadow: 0 2px 8px rgba(0,0,0,0.2);
 }
 
 .bg-blue {
-  background: #0096bb;
+  background-color: #0096bb;
 }
 
 .showcase {
@@ -119,11 +119,16 @@ header.masthead {
 */
 
 .features-icons .features-icons-item {
-  max-width: 20rem;
+  /*max-width: 20rem;*/
 }
 
 .features-icons .features-icons-item .features-icons-icon {
   height: 7rem;
+  color: #fff;
+  background: #00BCEA;
+  border-radius: 0.3rem;
+/*  text-shadow: 0 1px 4px rgba(0,0,0,0.2);
+  box-shadow: inset 0 1px 4px rgba(0,0,0,0.2);*/
 }
 
 .features-icons .features-icons-item .features-icons-icon i {
@@ -132,20 +137,6 @@ header.masthead {
 
 .features-icons .features-icons-item:hover .features-icons-icon i {
   font-size: 5rem;
-}
-
-.testimonials {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-}
-
-.testimonials .testimonial-item {
-  max-width: 36rem;
-}
-
-.testimonials .testimonial-item img {
-  max-width: 12rem;
-  box-shadow: 0px 5px 5px 0px #adb5bd;
 }
 
 .call-to-action {
@@ -213,4 +204,5 @@ a:hover {
   width: 100%;
   height: 100%;
   border: 0;
+
 }
