--- a/voxns/css/landing-page.css
+++ b/voxns/css/landing-page.css
@@ -50,9 +50,8 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: -0.04rem;
 }
 
-
 .hr {
-  margin-top: 6rem;
+  margin-top: 2rem;
   border-top: 0.25rem solid;
 }
 
@@ -91,7 +90,7 @@ header.masthead {
 }
 
 .showcase {
-  padding: 0rem 1rem 4rem;
+  padding: 4rem 1rem;
 }
 
 .showcase .showcase-text {
