--- a/voxns/css/landing-page.css
+++ b/voxns/css/landing-page.css
@@ -121,6 +121,10 @@ header.masthead {
   /*max-width: 20rem;*/
 }
 
+.features-icons p {
+  color: #808080;
+}
+
 .features-icons .features-icons-item .features-icons-icon {
   height: 7rem;
   color: #fff;
