--- a/voxns/css/landing-page.css
+++ b/voxns/css/landing-page.css
@@ -57,15 +57,15 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .hr {
-  margin-top: 2rem;
-  border-top: 0.25rem solid;
+  margin-bottom: 2rem;
+  border-bottom: 0.25rem solid;
 }
 
 .hr span {
   font-weight: inherit;
   background: #fff;
   position: relative;
-  top: -1.6rem;
+  top: 0.7rem;
   padding-right: 0.5rem;
 }
 
