--- a/voxns/css/landing-page.css
+++ b/voxns/css/landing-page.css
@@ -18,8 +18,8 @@ body {
 
 @media (min-width: 768px) { 
   .already {
-    background: url("../img/cisco-phone.jpg") no-repeat center top;
-    background-size: auto 600px;
+    background: url("../img/cisco-phone2.jpg") no-repeat center top;
+    background-size: auto 500px;
   }
 }
 
@@ -58,9 +58,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .hr {
-  color: #0096bb;
-  margin-bottom: 2rem;
-  border-bottom: 0.2rem solid #0096bb;
+  /*color: #0096bb;*/
+  margin-bottom: 1rem;
+  border-bottom: 0.2rem solid;
 }
 
 .hr span {
@@ -98,7 +98,8 @@ header.masthead {
 }
 
 .showcase {
-  padding: 0 1rem;
+  padding: 3rem 1rem;
+  background: #f0f0f0;
 }
 
 .showcase .showcase-img {
@@ -107,7 +108,8 @@ header.masthead {
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
-  border: 1rem solid #fff;
+  border: 1rem solid #f0f0f0;
+  border-radius: 1.5rem;
 }
 
 /*
@@ -121,14 +123,19 @@ header.masthead {
 }
 */
 
+.features-icons {
+  text-align: center;
+}
+
 .features-icons .features-icons-item {
   /*max-width: 20rem;*/
 }
 
 .features-icons .features-icons-item .features-icons-icon {
   height: 7rem;
-  color: #fff;
-  background: #00BCEA;
+  color: #00BCEA;
+  /*color: #fff;*/
+  /*background: #00BCEA;*/
 /* border-radius: 0.3rem;
   text-shadow: 0 1px 4px rgba(0,0,0,0.2);
   box-shadow: inset 0 1px 4px rgba(0,0,0,0.2);*/
@@ -141,16 +148,6 @@ header.masthead {
 .features-icons .features-icons-item:hover .features-icons-icon i {
   font-size: 5rem;
 }
-
-.call-to-action {
-  position: relative;
-  background-color: #343a40;
-  background: url("../img/masthead.jpg") no-repeat center center;
-  background-size: cover;
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-}
-
 
 footer.footer {
   padding-top: 4rem;
@@ -173,16 +170,28 @@ a:hover {
   font-size: 1.5rem;
 }
 
-.call {
-  border-radius: 10rem;
-  white-space: nowrap;
-}
-
 .btn-warning {
   font-size: 1.1rem;
 }
 
-.btn-warning .fas {
+.call {
+  font-size: 1rem;
+  color: #fff;
+  background-color: #00BCEA;
+  border-color: #00BCEA;
+  border-radius: 10rem;
+  white-space: nowrap;
+}
+
+.call:hover,
+.call:not(:disabled):not(.disabled):active, .call:not(:disabled):not(.disabled).active,
+.show > .call.dropdown-toggle {
+  color: #fff;
+  background-color: #1F4F70;
+  border-color: #1F4F70;
+}
+
+.call .fas {
   font-size: 90%;
 }
 
