--- a/voxns/css/landing-page.css
+++ b/voxns/css/landing-page.css
@@ -210,6 +210,7 @@ a:hover {
   padding-bottom: 56.25%;
 }
 
+.video-overlay,
 .video {
   position: absolute;
   top: 0;
@@ -218,4 +219,22 @@ a:hover {
   height: 100%;
   border: 0;
 
+.video-overlay {
+  z-index: 1;
+  background: url("../img/video-overlay.jpg") center no-repeat;
+  background-size: cover;
+}
+
+.video-overlay:hover {
+  box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+}
+
+.video-overlay:hover:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0,0,0,0.2);
 }
