--- a/voxns/css/landing-page.css
+++ b/voxns/css/landing-page.css
@@ -10,6 +10,14 @@ body {
   font-family: CiscoSansTT, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
+label small {
+  color: #a0a0a0;
+}
+
+::placeholder {
+  color: #c0c0c0 !important;
+}
+
 @media (min-width: 1200px) {
   .container {
     max-width: 960px;
@@ -52,8 +60,12 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: -0.04rem;
 }
 
+.text-white h1,
 .text-white h2,
-.text-white h3 {
+.text-white h3,
+.text-white h4,
+.text-white h5,
+.text-white h6 {
   color: #fff;
 }
 
@@ -77,6 +89,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .text-primary {
   color: inherit !important;
+}
+
+ul, ol {
+  padding-left: 1.5rem;
 }
 
 header.masthead {
@@ -112,16 +128,12 @@ header.masthead {
   border-radius: 1.5rem;
 }
 
-/*
-@media (min-width: 768px) {
-  .showcase .showcase-text {
-    padding: 1rem 3rem;
-  }
-  .showcase .showcase-img {
-    min-height: 20rem;
-  }
+form {
+  background: #f0f0f0;
+  padding: 1.5rem;
+  border-radius: 0.5rem;
+  box-shadow: inset 0 1px 4px rgba(0,0,0,0.2);
 }
-*/
 
 .features-icons {
   text-align: center;
@@ -170,7 +182,7 @@ a:hover {
   font-size: 1.5rem;
 }
 
-.btn-warning {
+.btn-lg {
   font-size: 1.1rem;
 }
 
