--- a/archive/2012/deadofur/style.css
+++ b/archive/2012/deadofur/style.css
@@ -1,4 +1,4 @@
-@import url('http://fonts.googleapis.com/css?family=Vast+Shadow');
+@import url('https://fonts.googleapis.com/css?family=Vast+Shadow');
 
 * {
 	margin: 0;
