--- a/archive/2012/seriousroutes/style.css
+++ b/archive/2012/seriousroutes/style.css
@@ -1,5 +1,5 @@
-@import url('http://fonts.googleapis.com/css?family=Lato:400,700');
-@import url('http://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700');
+@import url('https://fonts.googleapis.com/css?family=Lato:400,700');
+@import url('https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700');
 
 @font-face {
 	font-family: FontAwesome;
